--- a/css/_variables.scss
+++ b/css/_variables.scss
@@ -41,8 +41,10 @@ $yellow: #ffea00;
 $docGreen: #86bf19;
 $docGreenLight: #eef6e3;
 
-$beige: #f1eae6;
-$beigeBorder: #d3c8bf;
+$colorBGMeta: #efefef;
+$colorBGMetaBorder: #d3c8bf;
+$colorBGMetaLight: lighten($colorBGMeta,20%);
+$colorBGMetaDark: darken($colorBGMeta,5%);
 
 $buttonColor: #8cad32;
 
@@ -51,3 +53,6 @@ $bgOrange: #ff7e00;
 $colorBorder: #efefef;
 $colorText: #847C76;
 $colorTextHeader: darken($colorText,10%);
+
+$colorLink: #2d96ac;
+$colorHighlight: #d2e8bc;
