--- a/css/main.css
+++ b/css/main.css
@@ -2565,7 +2565,7 @@ html, body {
   .atv {
     color: #060; } }
 pre.prettyprint {
-  padding: 1em 1.5em; }
+  padding: 48px; }
 
 ol.linenums {
   margin-top: 0;
@@ -2583,6 +2583,14 @@ li.L1, li.L3, li.L5, li.L7, li.L9 {
   background-repeat: repeat-x;
   background-image: url("../images/bg-timber.jpg");
   color: #ffefb7; }
+
+::selection {
+  background: #d2e8bc;
+  /* WebKit/Blink Browsers */ }
+
+::-moz-selection {
+  background: #d2e8bc;
+  /* Gecko Browsers */ }
 
 .home-cta {
   text-align: center;
@@ -2767,7 +2775,7 @@ li.L1, li.L3, li.L5, li.L7, li.L9 {
   font-family: "Arimo", "HelveticaNeue", "Helvetica Neue", Helvetica, Arial, sans-serif;
   color: #847C76;
   line-height: 2em;
-  margin-bottom: 24px; }
+  margin-bottom: 18px; }
   .home-cta .docs-text {
     color: #ffefb7; }
 
@@ -2776,13 +2784,15 @@ li.L1, li.L3, li.L5, li.L7, li.L9 {
 
 .docs-link,
 .docs-link:visited {
+  color: #2d96ac;
+  text-decoration: none;
   -webkit-transition: all 0.1s ease-in-out;
   -moz-transition: all 0.1s ease-in-out;
   transition: all 0.1s ease-in-out; }
   .docs-link:hover,
   .docs-link:visited:hover {
-    color: #000;
-    border-bottom-color: transparent; }
+    border-bottom: 1px solid #847C76;
+    color: #847C76; }
 
 h2.doc-title {
   font-size: 2em;
@@ -2804,11 +2814,11 @@ h2.doc-title {
 
 .docs-example {
   font-size: 1em;
-  margin-bottom: 0.45em; }
+  margin-bottom: 12px; }
 
 .docs-table {
+  margin: 24px 0 48px;
   width: 100%;
-  margin-bottom: 1em;
   font-family: "Arimo", "HelveticaNeue", "Helvetica Neue", Helvetica, Arial, sans-serif; }
   .docs-table th, .docs-table td {
     padding: 8px; }
@@ -2816,7 +2826,7 @@ h2.doc-title {
     background-color: #fcf5f0; }
   .docs-table th {
     font-weight: bold;
-    background-color: #f1eae6; }
+    background-color: #efefef; }
   .docs-table td {
     text-align: center; }
   .docs-table.text-left td {
@@ -2827,8 +2837,7 @@ h2.doc-title {
     color: #86bf19;
     background: #eef6e3; }
   .docs-table td.is-hidden {
-    color: #ccc;
-    background-color: #f6f6f6; }
+    background-color: white; }
   .docs-table ul {
     margin: 10px 0; }
   .docs-table .disc,
@@ -2839,7 +2848,7 @@ ul.tabs {
   margin: 12px 0 -1px 0;
   padding: 0;
   width: 100%;
-  border-bottom: 1px solid #f1eae6;
+  border-bottom: 1px solid #efefef;
   float: left;
   font-family: "Arimo", "HelveticaNeue", "Helvetica Neue", Helvetica, Arial, sans-serif; }
 
@@ -2873,8 +2882,8 @@ ul.tabs li a {
   top: 0;
   left: 0;
   line-height: 100%;
-  background: #f1eae6;
-  border: 1px solid #f1eae6;
+  background: #efefef;
+  border: 1px solid #efefef;
   border-bottom: 0;
   border-radius: 5px 5px 0 0; }
   ul.tabs li a:hover {
@@ -2889,19 +2898,22 @@ ul.tabs li.current a {
   color: #ef5e1d; }
 
 .tab-content {
-  border: 1px solid #f1eae6;
+  border: 1px solid #efefef;
   clear: both;
   padding: 15px;
   margin: 0 0 24px 0; }
 
 .grid-demo {
-  padding: 10px;
+  background-color: #efefef;
   font-size: 0.75em;
-  text-align: center;
-  background-color: #f1eae6; }
+  margin-bottom: 24px;
+  padding: 10px;
+  text-align: center; }
 
 .docs-body pre,
 .docs-body code {
+  background-color: #efefef;
+  border: 1px solid #e2e2e2;
   font-size: 12px;
   margin: 24px 0; }
 .docs-body hr {
