Add styling to notes

--- a/css/_variables.scss
+++ b/css/_variables.scss
@@ -37,6 +37,8 @@ $orangeDark: #e36f10;
 $textOnOrange: #ffefb7;
 
 $yellow: #ffea00;
+$yellowLight: #faefce;
+$yellowLightBorder: darken($yellowLight,10%);
 
 $docGreen: #86bf19;
 $docGreenLight: #eef6e3;
